@@ -48,6 +48,7 @@ Version 1.0.8.10
      * Limited support for prompt detection in single line Bash snippets (BenBE)
      * Added functions of the C standard library (BenBE)
      * Rework of Lua to use GeSHi's features better (BenBE)
+     * Language file improvements for Python (Zbyszek Szmek)
 Version 1.0.8.9
   -  Added language files
      * Algol68 (Neville Dempsey)
